--- a/Camera2Api/src/main/res/layout/fragment_camera2_video.xml
+++ b/Camera2Api/src/main/res/layout/fragment_camera2_video.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupVideo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="timer,switch_camera,flash,imgRecordingVideo,txtViewCounter" />
+
     <com.example.android.camera2video.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
@@ -112,12 +119,12 @@
     <ImageView
         android:id="@+id/imgRecordingVideo"
         android:layout_width="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/txtViewVideo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_start_recording"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_start_recording"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewVideo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
