--- a/Camera2Api/src/main/res/layout/activity_main.xml
+++ b/Camera2Api/src/main/res/layout/activity_main.xml
@@ -4,5 +4,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/activity_background"
+    android:background="@android:color/white"
     tools:context="com.ibot.cyranosystems.camerasampleapp.MainActivity"/>
